{{$NEXT}}

0.73     2019-01-20

- Fix test failures on Windows. Based on GH #91 from Shlomi Fish.


0.72     2018-12-20

- Added documentation for the -j/--jobs flag to the tidyall script's help
  output and POD docs.

- Make the --iterations flag for bin/tidyall actually work. This had been
  documented but it has never actually done anything (though setting this in
  your config file does work).


0.71     2018-09-12

- Added two new plugins, GenericValidator and GenericTransformer. These allow
  you to execute any command as a validator or transformer respectively. This
  should be sufficient to keep us all from having to write new plugins for
  every command in the world, as these two plugins should handle most common
  cases.


0.70     2018-04-12

- Borged File::Zglob into this distro for now. File::Zglob has not been
  installable under Perl 5.26+ for 8+ months
  (https://rt.cpan.org/Public/Bug/Display.html?id=120445).


0.69     2017-10-06

- We now chdir to $ROOT before running commands. This fixes issues when you
  run tidyall from a subdirectory of your $ROOT (which works) but commands run
  by tidyall (like perlcritic) are looking for files using paths relative to
  root. Patch by Olaf Alders. Fixes GH #85. PR #86


0.68     2017-09-29

- Fixed heisenbug that could cause displaying constructor params (in verbose
  mode) to omit most of the parameter values.


0.67     2017-09-18

- Move "cmd" attribute back to Code::TidyAll::Plugin. Moving this to a role in
  0.66 broke plugins which run external commands but which don't ship with
  this distro. Reported by Greg Oschwald. GH #82.


0.66     2017-09-17

- The tidyall command line app now takes a --plugins option. This allows you
  to limit tidyall to running just the selected plugin(s).


0.65     2017-08-01

- A file under Git which had a status of "copied" would cause uninitialized
  value warnings from a pre-commit hook. Reported by Nigel Metheringham with
  help from Adam Herzog. GH #81.

